# yfinance-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  entrypoint.py  pyproject.toml  requirements.txt
src/: __init__.py  yfinance_mcp.py
src/yfinance_mcp/: server.py
tests/: conftest.py  test_server.py
