[project]
name = "yfinance-mcp"
version = "0.1.0"
description = "MCP server providing access to Yahoo Finance data via yfinance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "yfinance>=0.2.0",
]

[[project.authors]]
name = "Your Name"
email = "your.email@example.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
yfinance-mcp = "yfinance_mcp:run"

[tool.black]
line-length = 100
target-version = ['py310']
