[project]
name = "yfinance-mcp"
version = "0.1.0"
description = "MCP server providing access to Yahoo Finance data via yfinance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=0.1.0",
    "yfinance>=0.2.0",
]

[[project.authors]]
name = "mobatmedia"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
]

[project.scripts]
yfinance-mcp = "yfinance_mcp:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
